--- a/main.html
+++ b/main.html
@@ -7,20 +7,22 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+
 	<ul>
-		<li>
-			<a href="https://en.wikipedia.org/wiki/Golden_Retriever">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg">
-			</a>	
-		</li>
-		<li>
-			<a href="https://en.wikipedia.org/wiki/Poodle">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg">
-			</a>	
-		</li>
-	</ul>
+  <li>
+    <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever">
+    </a>
+  </li>
+  <li>
+    <a href="https://en.wikipedia.org/wiki/Poodle">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Poodle">
+    </a>
+  </li>
+</ul>
+
 	
+	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
